<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.natsuume.slackbot</groupId>
  <artifactId>slackbot_client</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
    <build>
  	<plugins>
		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
 			 <artifactId>maven-compiler-plugin</artifactId>
			  <version>3.8.0</version>
			  <configuration>
			  	<source>11</source>
			  	<target>11</target>
			  </configuration>
		</plugin>
  	</plugins>
  </build>
  <dependencies>
     <dependency>
	  <groupId>org.riversun</groupId>
	  <artifactId>slacklet</artifactId>
	  <version>1.0.4</version>
	</dependency>
  </dependencies>
  
</project>